@@ -1,3 +1,6 @@
+  09 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-dwh-9999.ebuild:
+  remove maven leftovers
+
   06 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> metadata.xml,
   ovirt-engine-dwh-9999.ebuild:
   switch from maven to ant per upstream
